force-app/main/default/objects/cuda_signnow__SNEmail__c/cuda_signnow__SNEmail__c.object-meta.xml
<CustomObject>
    <label>SNEmail</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SNEmails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>