force-app/main/default/objects/cuda_signnow__SNEmail__c/fields/cuda_signnow__Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Date_Sent__c</fullName>
    <label>Date Sent</label>
    <required>true</required>
    <type>Date</type>
</CustomField>