force-app/main/default/objects/cuda_signnow__SNEmail__c/fields/cuda_signnow__Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Date_Signed__c</fullName>
    <label>Date Signed</label>
    <type>Date</type>
</CustomField>