force-app/main/default/objects/cuda_signnow__SNEmail__c/fields/cuda_signnow__Email__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Email__c</fullName>
    <label>Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>