force-app/main/default/objects/cuda_signnow__SNEmail__c/fields/cuda_signnow__Order__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>