force-app/main/default/objects/cuda_signnow__SNEmail__c/fields/cuda_signnow__Signed__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed</label>
    <type>Checkbox</type>
</CustomField>