force-app/main/default/objects/cuda_signnow__SNEmail__c/fields/cuda_signnow__SignNow_Document_Status__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__SignNow_Document_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SignNow Document Status</label>
    <referenceTo>cuda_signnow__SignNowStatus__c</referenceTo>
    <relationshipLabel>SNEmails</relationshipLabel>
    <relationshipName>SNEmails</relationshipName>
    <type>Lookup</type>
</CustomField>